--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -79,7 +79,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/InputPriorityManager.gd"
 }, {
-"base": &"Control",
+"base": &"Node",
 "class": &"InputVisualFeedback",
 "icon": "",
 "is_abstract": false,
