--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -82,6 +82,24 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
+[res://Scripts/InputPriorityManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 38,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 146,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 38,
+"selection_from_line": 146,
+"selection_to_column": 70,
+"selection_to_line": 151,
+"syntax_highlighter": "GDScript"
+}
+
 [res://Scripts/ControlComponents/DirectControlComponent.gd]
 
 state={
@@ -180,7 +198,7 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/ControlComponents/InputCore.gd]
+[res://Scripts/InputCore.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
@@ -189,7 +207,21 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 276,
-"scroll_position": 241.0,
+"scroll_position": 258.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/RawInputProcessor.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 30,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 51,
+"scroll_position": 27.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
