--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -69,7 +69,15 @@ list=[{
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/ControlComponents/InputCore.gd"
+"path": "res://Scripts/InputCore.gd"
+}, {
+"base": &"Node",
+"class": &"InputPriorityManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/InputPriorityManager.gd"
 }, {
 "base": &"Node",
 "class": &"InputVisualFeedback",
@@ -94,6 +102,14 @@ list=[{
 "is_tool": false,
 "language": &"GDScript",
 "path": "res://Scripts/CameraComponents/OrbitComponent.gd"
+}, {
+"base": &"Node",
+"class": &"RawInputProcessor",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/RawInputProcessor.gd"
 }, {
 "base": &"Node",
 "class": &"TargetControlComponent",
