Revert "input refactor test"
This reverts commit 15990e70d5966bfaa076f482439d89811594eb42.

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -79,7 +79,7 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/InputPriorityManager.gd"
 }, {
-"base": &"Node",
+"base": &"Control",
 "class": &"InputVisualFeedback",
 "icon": "",
 "is_abstract": false,
