--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://CCC.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://minimal_theme.tres")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://THEORY/", "res://Scripts/", "res://Scripts/ControlComponents/", "res://Scripts/CharacterComponents/", "res://Scripts/CameraComponents/", "res://Assets/")
 dock_node_current_tab=1
 dock_history_include_scene=true
@@ -29,23 +29,22 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://CCC.tscn")
-current_scene="res://SCENE.tscn"
-center_split_offset=-607
+current_scene="res://CCC.tscn"
+center_split_offset=-696
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(3840, 29)
+position=Vector2i(0, 88)
 size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/CAMERA.gd", "res://Scripts/CCC_Manager.gd", "res://Scripts/CHARACTER.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/CameraComponents/DistanceComponent.gd", "res://Scripts/CameraComponents/FollowComponent.gd", "res://Scripts/ControlComponents/GamepadControlComponent.gd", "res://Scripts/InputCore.gd", "res://Scripts/InputPriorityManager.gd", "res://Scripts/ControlComponents/InputVisualFeedback.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/RawInputProcessor.gd", "res://Scripts/ControlComponents/TargetControlComponenet.gd"]
-selected_script="res://Scripts/CharacterComponents/MovementComponent.gd"
+selected_script="res://Scripts/CAMERA.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
