--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 97,
-"scroll_position": 73.0,
+"row": 95,
+"scroll_position": 56.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,12 +31,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 28,
-"scroll_position": 0.0,
-"selection": false,
+"row": 150,
+"scroll_position": 131.0,
+"selection": true,
+"selection_from_column": 5,
+"selection_from_line": 150,
+"selection_to_column": 20,
+"selection_to_line": 150,
 "syntax_highlighter": "GDScript"
 }
 
@@ -82,30 +86,16 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
-[res://Scripts/InputPriorityManager.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 61,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 386,
-"scroll_position": 115.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/ControlComponents/DirectControlComponent.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 39,
+"column": 31,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 15,
-"scroll_position": 89.0,
+"row": 126,
+"scroll_position": 86.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -129,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 322,
-"scroll_position": 146.0,
+"row": 234,
+"scroll_position": 208.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -143,11 +133,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 110,
-"scroll_position": 86.0,
+"row": 17,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -157,11 +147,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 16,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 147,
-"scroll_position": 124.0,
+"row": 38,
+"scroll_position": 12.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -171,11 +161,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 90,
-"scroll_position": 78.0,
+"row": 211,
+"scroll_position": 172.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -185,11 +175,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 25,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 244,
-"scroll_position": 110.0,
+"row": 27,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -202,8 +192,8 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 166,
-"scroll_position": 126.0,
+"row": 196,
+"scroll_position": 156.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
