--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -105,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 95,
+"column": 109,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 129,
-"scroll_position": 99.0,
+"row": 347,
+"scroll_position": 320.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,16 +133,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 82,
+"column": 44,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
-"scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 62,
-"selection_from_line": 12,
-"selection_to_column": 82,
-"selection_to_line": 12,
+"row": 34,
+"scroll_position": 25.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
