Revert "fixed rotation towards"
This reverts commit 80b29c127d6d624db4e44317988d1baeb01fa3c3.

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -105,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 109,
+"column": 95,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 347,
-"scroll_position": 320.0,
+"row": 129,
+"scroll_position": 99.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,12 +133,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 44,
+"column": 82,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 34,
-"scroll_position": 25.0,
-"selection": false,
+"row": 12,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 62,
+"selection_from_line": 12,
+"selection_to_column": 82,
+"selection_to_line": 12,
 "syntax_highlighter": "GDScript"
 }
 
