--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -105,11 +105,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 95,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 129,
-"scroll_position": 99.0,
+"row": 302,
+"scroll_position": 269.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 81,
+"column": 59,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 90,
-"scroll_position": 51.0,
+"row": 234,
+"scroll_position": 208.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,16 +133,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 82,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 12,
+"row": 17,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 62,
-"selection_from_line": 12,
-"selection_to_column": 82,
-"selection_to_line": 12,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
