--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 95,
-"scroll_position": 56.0,
+"row": 97,
+"scroll_position": 73.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -31,16 +31,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 20,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 150,
-"scroll_position": 131.0,
-"selection": true,
-"selection_from_column": 5,
-"selection_from_line": 150,
-"selection_to_column": 20,
-"selection_to_line": 150,
+"row": 28,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -86,16 +82,30 @@ state={
 "syntax_highlighter": "GDScript"
 }
 
+[res://Scripts/InputPriorityManager.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 61,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 386,
+"scroll_position": 115.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
 [res://Scripts/ControlComponents/DirectControlComponent.gd]
 
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 31,
+"column": 39,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 126,
-"scroll_position": 86.0,
+"row": 15,
+"scroll_position": 89.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -119,11 +129,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 59,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 234,
-"scroll_position": 208.0,
+"row": 322,
+"scroll_position": 146.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -133,11 +143,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 17,
-"scroll_position": 0.0,
+"row": 110,
+"scroll_position": 86.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -147,11 +157,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 17,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 38,
-"scroll_position": 12.0,
+"row": 147,
+"scroll_position": 124.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -161,11 +171,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 211,
-"scroll_position": 172.0,
+"row": 90,
+"scroll_position": 78.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -175,11 +185,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 27,
-"scroll_position": 0.0,
+"row": 244,
+"scroll_position": 110.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -192,8 +202,8 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 196,
-"scroll_position": 156.0,
+"row": 166,
+"scroll_position": 126.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
