--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -71,6 +71,14 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/InputCore.gd"
 }, {
+"base": &"Node",
+"class": &"InputPriorityManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/InputPriorityManager.gd"
+}, {
 "base": &"Control",
 "class": &"InputVisualFeedback",
 "icon": "",
