--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -44,8 +44,8 @@ size=Vector2i(3248, 1669)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/CAMERA.gd", "res://character_controller_plan.md", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/CameraComponents/DistanceComponent.gd", "res://Scripts/ControlComponents/GamepadControlComponent.gd", "res://Scripts/InputCore.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/ControlComponents/TargetControlComponenet.gd"]
-selected_script="res://Scripts/CameraComponents/OrbitComponent.gd"
+open_scripts=["res://Scripts/CAMERA.gd", "res://character_controller_plan.md", "res://Scripts/CONTROL.gd", "res://Scripts/ControlComponents/DirectControlComponent.gd", "res://Scripts/CameraComponents/DistanceComponent.gd", "res://Scripts/ControlComponents/GamepadControlComponent.gd", "res://Scripts/InputCore.gd", "res://Scripts/CharacterComponents/MovementComponent.gd", "res://Scripts/CameraComponents/OrbitComponent.gd", "res://Scripts/ControlComponents/TargetControlComponenet.gd"]
+selected_script="res://Scripts/CONTROL.gd"
 open_help=[]
 script_split_offset=526
 list_split_offset=0
